--- a/templates/data_editor/data_editor.html
+++ b/templates/data_editor/data_editor.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='data_editor/styles/toolbar.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='data_editor/styles/split_pane.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='data_editor/styles/page.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='data_editor/styles/spinner.css') }}">
     <script src="https://cdn.rawgit.com/lingtalfi/simpledrag/master/simpledrag.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/handsontable@latest/dist/handsontable.full.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/handsontable@latest/dist/handsontable.full.min.css" rel="stylesheet" />
@@ -28,11 +29,21 @@
         </div>
     </div>
 
+    <div id="loading-bar">
+        <div class="spinner"></div>
+    </div>
+
+
     {% include "data_editor/include/documentation.html" %}
+    {% include "data_editor/include/preferences.html" %}
+
     <script src="{{ url_for('static', filename='data_editor/scripts/data_table.js') }}"></script>
     <script src="{{ url_for('static', filename='data_editor/scripts/split_pane.js') }}"></script>
     <script src="{{ url_for('static', filename='data_editor/scripts/documentation.js') }}"></script>
+    <script src="{{ url_for('static', filename='data_editor/scripts/preferences.js') }}"></script>
     <script src="{{ url_for('static', filename='data_editor/scripts/winbox.bundle.js') }}"></script>
+    <script src="{{ url_for('static', filename='data_editor/scripts/spinner.js') }}"></script>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
