--- a/templates/data_editor/include/documentation.html
+++ b/templates/data_editor/include/documentation.html
@@ -1,6 +1,6 @@
 <div id="backstore" style="display: none">
     <div style="color:black" id="content">
-        <h1>Lorem Ipsum</h1>
+        <h1>Preferences</h1>
         <p>Documentation is rad</p>
     </div>
 </div>
