--- a/templates/data_editor/include/info_bar.html
+++ b/templates/data_editor/include/info_bar.html
@@ -1,18 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="z-index: 1000; margin-bottom: 2px;">
     <div class="collapse navbar-collapse" id="navbarNav" style="width: 100%">
-        <div class="titlebar row" style="width: 100%">
-            <ul class="navbar-nav">
-                <li class="nav-item">
+        <div class="titlebar row" style="display: flex; justify-content: center; width: 100%;">
+            <ul class="navbar-nav" style="display: flex; justify-content: space-between; width: 100%;">
+                <li style="margin-right: 10px;" class="title nav-item">
+                    <div class="row">
+                        <img style="margin-left:15px; margin-top: 8px;" src="{{ url_for('static', filename='global/DZ.ico') }}" alt="DZ.ico" width="24" height="24">
+                        <h6 >dzToolBox</h6>
+                    </div>
+                </li>
+    orward a subdomain            <li class="nav-item">
                     {% if (file or 'last_uploaded_file' in session) %}
                         <h6>File Name: {{ session["last_uploaded_file"][33:] }}</h6>
                     {% else %}
                         <h6>File Name: spreadsheet.xlsx</h6>
                     {% endif %}
                 </li>
-                <li class="title nav-item">
-                    <h6>dzToolBox</h6>
-                </li>
-                <li style="cursor: pointer" class="documentation nav-item">
+                <li class="documentation nav-item" style="margin-left: auto; cursor: pointer;">
                     <h6 id="documentation">Documentation</h6>
                 </li>
             </ul>
