--- a/templates/data_editor/include/info_bar.html
+++ b/templates/data_editor/include/info_bar.html
@@ -8,7 +8,7 @@
                         <h6 >dzToolBox</h6>
                     </div>
                 </li>
-    orward a subdomain            <li class="nav-item">
+                <li class="nav-item">
                     {% if (file or 'last_uploaded_file' in session) %}
                         <h6>File Name: {{ session["last_uploaded_file"][33:] }}</h6>
                     {% else %}
