--- a/templates/data_editor/data_editor.html
+++ b/templates/data_editor/data_editor.html
@@ -30,6 +30,7 @@
     </div>
 
     <div id="loading-bar">
+        <h3 style="color: #3498db; position: absolute; top: 40%; left: 40%;">Generating Outputs, Please Wait...</h3>
         <div class="spinner"></div>
     </div>
 
