--- a/templates/data_editor/include/info_bar.html
+++ b/templates/data_editor/include/info_bar.html
@@ -4,7 +4,7 @@
             <ul class="navbar-nav" style="display: flex; justify-content: space-between; width: 100%;">
                 <li style="margin-right: 10px;" class="title nav-item">
                     <div class="row">
-                        <img style="margin-left:15px; margin-top: 8px;" src="{{ url_for('static', filename='global/DZ.ico') }}" alt="DZ.ico" width="24" height="24">
+                        <a href="/"><img style="margin-left:15px; margin-top: 8px;" src="{{ url_for('static', filename='global/DZ.ico') }}" alt="DZ.ico" width="24" height="24"></a>
                         <h6 >dzToolBox</h6>
                     </div>
                 </li>
