Set the data table to save to server whenever data is changed

--- a/templates/data_editor/data_editor.html
+++ b/templates/data_editor/data_editor.html
@@ -6,6 +6,7 @@
     <title>dzToolBox</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/handsontable/dist/handsontable.full.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/hyperformula/dist/hyperformula.full.min.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='data_editor/styles/toolbar.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='data_editor/styles/split_pane.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='data_editor/styles/page.css') }}">
