--- a/templates/data_editor/include/table.html
+++ b/templates/data_editor/include/table.html
@@ -1,3 +1,4 @@
-<h5 class="mt-2">Data Table</h5>
+{% include "data_editor/include/toolbars/data_table_toolbar.html" %}
+<br />
 <div style="margin-left: 10px !important;" id="hot"></div>
 <input type="hidden" id="spreadsheetData" value='{{ spreadsheet_data | tojson }}' />
