redirect to other dz_tools project

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,10 @@
             <img src="{{ url_for('static', filename='/global/test_data.jpg') }}" alt="DZ.ico">
         </p>
     </div>
+    <a id="new_site" href="http://dztools-isu-geochron.koyeb.app"></a>
+    <script>
+        document.getElementById("new_site").click();
+    </script>
     <script src="../static/global/scripts/navbar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     {% include 'global/footer.html' %}
